//protoc -I proto proto/grpc.proto --go_out=plugins=grpc:plugins
syntax = "proto3";

package grpc;

option go_package = "plugins;plugins";

message TimerInfo {
    string timerID = 1;
    int32 shardID = 2;
    string nameSpace = 3;
    string interval = 4;
    int32 count = 5;
    string startTime = 6;
    string mostRecent = 7;
    int32 amountFired = 8;
    string timeCreated = 9;
}

message CreateJobRequest {
    string timerId = 1;
    int32 shardId = 2;
    string nameSpace =3;
    string interval = 4;
    int32 count = 5;
    string startTime = 6;
}

message CreateJobResponse {
    TimerInfo timerinfo = 1;
}

message DeleteJobRequest {
    string timerId = 1;
    string nameSpace = 2;
    int32 shardId = 3;
}

message DeleteJobResponse {
    bool deleted = 1;
}

service Actions {
    rpc Create (CreateJobRequest) returns (CreateJobResponse);
    rpc Delete (DeleteJobRequest) returns (DeleteJobResponse);
}
